# learning.linux

./: .gitignore  README.md  bookmarks.html  工作.md
BashScripts/: fileglobbing.sh  for_task.sh  task.sh  time.sh
C/: EOFtest  EOFtest.c  argc_argv  argc_argv.c  mystrlen  mystrlen.c
CMake/Demo01/: CMakeLists.txt  main.cpp
CMake/Demo02/: CMakeLists.txt
CMake/Demo02/calcTest/: CMakeLists.txt
CMake/Demo_r/: CMakeLists.txt
CMake/Demo_r/calc/: CMakeLists.txt
CMake/Demo_r/include/: sort.h
CMake/Demo_r/sort/: CMakeLists.txt  insertionSort.cpp  selectionSort.cpp
CMake/Demo_r/test01/: CMakeLists.txt
CMake/Demo_r/test02/: CMakeLists.txt
CS/taskv1/: client  client.cpp  mulserver.cpp  server  server.cpp
ComputerNetwork/: 互联网协议.md  概念.md
SSH/: linuxServer.cpp  test
Socket/: server  server.cpp  socket.md
argvtoint/: app  atoiFunc.c  strtokFun.cpp  strtolFunc.c  test1  test2
bash scripts/: Bash Debug.odt  file1.txt  file_num.sh  if_else.sh  score.sh  test  trap.sh  yyy
benchmark/: a.out
callback/demo01/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
cast/: app  const.cpp  reinterpret.cpp
char/: main.cpp
const/: app  demo.cpp
cpp/char/: app  main.cpp
cpp/const/: app  demo1.cpp
cpp/define/: app  demo1.cpp
cpp/deque/: CMakeLists.txt  deque.cpp
cpp/namesp/: app  test1.cpp
cpp/newplace/: app  test1.cpp
cpp/nullptr/: app  demo1.cpp
cpp/queue/: app  bank.cpp  queue.cpp  queue.h
cpp/stl/: app  iterator1.cpp  list.cpp  multimap.cpp  setops.cpp  vect3.cpp
cuda/notebook/: unit1.md  unit2.md  unit3.md
enmu/: app  enmu_printf.c  readbuffer.c  test.c
gcc/: README
gcc/Demo00/: app  main.cpp
gcc/Demo01/: app  main.cpp  test.cpp
gcc/Demo02/: app  main.cpp
gdb/: gdb.odt
gdb/Demo01/: example  main.cpp
gdb/Demo02/: app  main.c
gdb/eg1/: app  core-app-20132-1733721582  core-app-9971-1733720222  main.c
gdb/eg2/: app  core-app-34711-1733723593  core-app-57958-1733726822  main.cpp
gdb/eg3/: app  main.cpp
gdb/eg3.copy/: app  main.cpp
gtest/demo01/: app  first.cpp
gtest/demo02/: gtest_main.cc  sample1_unittest.cc
gtest/demo03/: gtest_main.cc  sample3-inl.h  sample3_unittest.cc
json/demo01/: test01.cpp
json/demo1/: CMakeLists.txt  main.cpp
linux/: Linux.odt
makefile/: Makefile.odt
makefile/make01/: Makefile
makefile/make02/: Makefile
makefile/make03/: Makefile
makefile/make04/: Makefile
makefile/makefile/: Makefile
move/: app  demo.cpp  demo2.cpp  lvalue.cpp  move.cpp
opencv/: CMakeLists.txt  matbuild.cpp
operator/: app
operator/include/: mytime.h  myvector.h  stonewt.h
operator/src/: mytime.cpp  myvector.cpp  stonewt.cpp
operator/test/: usetime.cpp  usevector.cpp
pcl/: CMakeLists.txt
search/: hello  hello.c
sharedlib/src/: sub.c
sharedlib/test/: main
static/: app  demo.cpp
staticlib/test/: main
stl/list/: list.cpp
stl/queue/: main  main.cpp
typenam/: app  main.cpp
(+76 files in other folders)
